--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 {% if site.layout == 'stacked' %}
   <div class="container-lg py-6 p-responsive text-center">
     <!-- {% include masthead.html metadata=true %} -->
-     {% include vidar_anypos.html %}
+     <!-- {% include vidar_anypos.html %} -->
   </div>
 {% else %}
   <div class="d-md-flex min-height-full {% unless site.style == 'dark' %}border-md-bottom{% endunless %}">
