--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,10 @@
 {% include header.html %}
 
 {% if site.layout == 'stacked' %}
-  <div class="container-lg py-6 p-responsive text-center">
+  <!-- <div class="container-lg py-6 p-responsive text-center"> -->
     <!-- {% include masthead.html metadata=true %} -->
      <!-- {% include vidar_anypos.html %} -->
-  </div>
+  <!-- </div> -->
 {% else %}
   <div class="d-md-flex min-height-full {% unless site.style == 'dark' %}border-md-bottom{% endunless %}">
     <div class="flex-self-stretch {% if site.style == 'dark' %}bg-gray-dark{% else %}border-md-right border-gray-light bg-white{% endif %} col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-6">
