--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,29 @@
 {% include header.html %}
 
 {% if site.layout == 'stacked' %}
-  <!-- <div class="container-lg py-6 p-responsive text-center"> -->
-    <!-- {% include masthead.html metadata=true %} -->
-     <!-- {% include vidar_anypos.html %} -->
-  <!-- </div> -->
+  <div class="container-lg py-6 p-responsive text-center">
+    {% include masthead.html metadata=true %}
+
+    <div {% if site.style == 'dark' %}class="text-white"{% endif %}>
+      {{ content }}
+    </div>
+
+    <div class="my-6">
+      {% include projects.html %}
+    </div>
+
+    {% if site.topics %}
+      <div class="my-6">
+        {% include interests.html %}
+      </div>
+    {% endif %}
+
+    {% unless posts_total == 0 %}
+      <div class="my-6">
+        {% include thoughts.html %}
+      </div>
+    {% endunless %}
+  </div>
 {% else %}
   <div class="d-md-flex min-height-full {% unless site.style == 'dark' %}border-md-bottom{% endunless %}">
     <div class="flex-self-stretch {% if site.style == 'dark' %}bg-gray-dark{% else %}border-md-right border-gray-light bg-white{% endif %} col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-6">
